--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,49 +1,20 @@
+// Define colors
+// ------------------------------------------------
+$theme-colors: (
+  "primary": #EF3340,
+  "dark": #494F66,
+);
+
+// Fonts
+// ------------------------------------------------
+$font-size-base: 1rem;
+$font-family-base: 'Roboto', sans-serif;
+
 // Libraries
 @import '~bootstrap/scss/bootstrap';
 
 // Local styles
+@import "base/index";
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
-
-.App {
-  text-align: center;
-  p {
-    color: red;
-  }
-}
-
-.App-logo {
-  height: 50px;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
